# rustos

./: .gitignore  LICENSE  README.md
.github/workflow/: main.yml
os/: Cargo.toml  Makefile
os/.cargo/: config
os/src/: consts.rs  context.rs  entry.asm  init.rs  interrupt.rs  io.rs  lang_items.rs  lib.rs  linker.ld  main.rs  sbi.rs  timer.rs
os/src/boot/: entry64.asm
os/src/memory/: frame_allocator.rs  mod.rs
os/src/trap/: trap.asm
